<resources>
    <string name="app_name">E4 Clinic</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="client">Client List</string>
    <string name="blog">Blog</string>
    <string name="more">More</string>
    <string name="inbox">inbox</string>
    <string name="notification">notification</string>
    <string name="welcome">Welcome,</string>
    <string name="total_visits">Total Visits</string>
    <string name="clinics">Clinics</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="total_call">Total Calls</string>
    <string name="my_profile">My Profile</string>
    <string name="reports">Reports</string>
    <string name="schedule_history">Schedule History</string>
    <string name="setting">Setting</string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="video_call">Video Call</string>
    <string name="search_name_or_mobile">Search by Name or Mobile</string>
    <string name="filter">Filter</string>
    <string name="Doctor">Doctor</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Feedback</string>
    <string name="total_video_calls">Total Video Calls</string>
    <string name="start_video">Start Video</string>
    <string name="schedule">Schedule</string>
    <string name="search_name">Search by Name</string>
    <string name="new_plan">New Plan</string>
    <string name="schedule_details">Schedule Details</string>
    <string name="clinic">Clinic</string>
    <string name="appointment_reason">Appointment Reason</string>
    <string name="view_appointment_history">View History Appointment</string>
    <string name="view">View</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="survey_form">Survey Form</string>
    <string name="feedback1">Feedback1</string>
    <string name="attachement_files">Attachement files</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="add_new_client">Add New Client</string>
    <string name="client_type">Client Type</string>
    <string name="entity_client">Entity Client</string>
    <string name="choose_client">Choose Client</string>
    <string name="client_address_branches_addresses">Client Address (Branches Addresses</string>
    <string name="branche_name">Branche Name</string>
    <string name="save">Save</string>
    <string name="set_new_plan">Set New Plan</string>
    <string name="branches">Branches</string>
    <string name="reason_plan">Reason Plan</string>
    <string name="feedback_summary">Feedback Summary</string>
</resources>