<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp"
    android:layout_marginBottom="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginEnd="@dimen/_6sdp"
    app:cardBackgroundColor="@color/colorLightMove"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_4sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_circle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/green_circle"
                    app:layout_constraintBottom_toBottomOf="@id/img_doctor"
                    app:layout_constraintEnd_toEndOf="@id/img_doctor" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/Doctor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/cardview_circle"
            app:layout_constraintTop_toTopOf="@id/cardview_circle" />

        <TextView
            android:id="@+id/txt_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@id/txt_doctor"
            app:layout_constraintStart_toEndOf="@id/txt_doctor"
            app:layout_constraintTop_toTopOf="@id/txt_doctor"
            tools:text="@string/Doctor" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/colorLightGreen"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/txt_doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_doctor"
            tools:text="@string/confirm" />

        <ImageView
            android:id="@+id/img_clock"
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="@+id/txt_doctor"
            app:layout_constraintTop_toBottomOf="@id/txt_doctor" />

        <TextView
            android:id="@+id/txt_visit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@id/img_clock"
            app:layout_constraintStart_toEndOf="@id/img_clock"
            app:layout_constraintTop_toTopOf="@id/img_clock"
            android:text="09:30 PM - 10:00 PM" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_videocall"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/rounder_bordered_button_bg"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_start_video_call"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/btn_startcall_rounded_bg"
            android:text="@string/start_video"
            android:textAllCaps="false"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel_videocall">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
