<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_110sdp"
    app:cardBackgroundColor="@color/purple_200"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_20sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_circle"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/Doctor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/cardview_circle"
            app:layout_constraintTop_toTopOf="@id/cardview_circle" />

        <TextView
            android:id="@+id/txt_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@id/txt_doctor"
            app:layout_constraintStart_toEndOf="@id/txt_doctor"
            app:layout_constraintTop_toTopOf="@id/txt_doctor"
            tools:text="@string/Doctor" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/txt_doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_doctor"
            tools:text="@string/confirm" />

        <ImageView
            android:id="@+id/img_clock"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="@+id/txt_doctor"
            app:layout_constraintTop_toBottomOf="@id/txt_doctor" />

        <TextView
            android:id="@+id/txt_visit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@id/img_clock"
            app:layout_constraintStart_toEndOf="@id/img_clock"
            app:layout_constraintTop_toTopOf="@id/img_clock"
            tools:text="09:30 PM - 10:00 PM" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@+id/txt_doctor"
            app:layout_constraintTop_toBottomOf="@id/img_clock" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@id/img_location"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toTopOf="@id/img_location"
            tools:text="43 Nakhla moteey st , Nasr City" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/rounder_bordered_button_bg"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardBackgroundColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_plus"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/txt_feedback"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/feedback"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/img_plus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_plus"
                    app:layout_constraintTop_toTopOf="@id/img_plus" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
