<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.e4clinic.ui.viewmodel.ClinicsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ClinicsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_clinics"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/img_clinics"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_clinic_blue_rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/clinics"
                    android:textColor="@color/purple_200"
                    app:layout_constraintBottom_toBottomOf="@+id/img_clinics"
                    app:layout_constraintStart_toEndOf="@id/img_clinics"
                    app:layout_constraintTop_toTopOf="@+id/img_clinics" />

                <TextView
                    android:id="@+id/txt_clinics_total_visits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:text="@string/total_visits"
                    android:textColor="@color/purple_200"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/txt_clinics_visits"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_clinics_visits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textColor="@color/purple_200"
                    android:text="10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_search"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="@id/cardview_clinics"
            app:layout_constraintTop_toBottomOf="@+id/cardview_clinics">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:background="@null"
                    android:hint="@string/search_name_or_mobile"
                    android:textColorHint="@color/purple_200"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="@id/img_search"
                    app:layout_constraintStart_toEndOf="@+id/img_search"
                    app:layout_constraintTop_toTopOf="@id/img_search" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_filter"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@id/cardview_search"
            app:layout_constraintEnd_toEndOf="@id/cardview_clinics"
            app:layout_constraintStart_toEndOf="@id/cardview_search"
            app:layout_constraintTop_toTopOf="@+id/cardview_search">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_filter"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_filter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/filter"
                    android:textColor="@color/purple_200"
                    app:layout_constraintBottom_toBottomOf="@id/img_filter"
                    app:layout_constraintStart_toEndOf="@+id/img_filter"
                    app:layout_constraintTop_toTopOf="@id/img_filter"></TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_calender"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_search">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txt_month_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_200"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="August 2020" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/ic_dropdown"
                        app:layout_constraintBottom_toBottomOf="@id/txt_month_year"
                        app:layout_constraintStart_toEndOf="@id/txt_month_year"
                        app:layout_constraintTop_toTopOf="@id/txt_month_year" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <noman.weekcalendar.WeekCalendar
                    android:id="@+id/calender_week_clinic"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:dayNameLength="threeLetters"
                    app:daysBackgroundColor="@android:color/transparent"
                    app:daysTextColor="@color/colorMediumGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_calender"
                    app:numOfPages="1000"
                    app:selectedBgColor="@color/purple_200"
                    app:todaysDateBgColor="@color/purple_200"
                    app:weekBackgroundColor="@color/white"
                    app:weekTextColor="@color/purple_200"
                    app:weekTextSize="@dimen/_10sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_clinics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_calender" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>